--- a/css/screen.css
+++ b/css/screen.css
@@ -11,6 +11,13 @@ html {
     color: #111;
     padding: 24px 24px 0;
     scroll-behavior: smooth;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    box-sizing: border-box;
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
 }
 
 /*
